# podcast_site

./: .gitignore  Cargo.toml
db-docker/: docker-compose.yml
db-docker/docker/db/data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.index  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
db-docker/docker/db/data/mysql/: general_log_212.sdi  slow_log_213.sdi
db-docker/docker/db/data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  (+82 more)
nginx-docker/: Dockerfile  default.conf
pem_key/: server-crt.pem  server-csr.pem  server-key.pem
serverSetup/: rust_install.sh  setup.sh
src/: main.rs  mysql_connection.rs
static/errors/: 404.css  404.html
templates/: cont_datails.html  cont_index.html  dtails.html  index.html  index_datails.html  login.html
tmp/: git_ssh.sh
(+2 files in other folders)
