[package]
name = "poscast-site"
version = "0.1.0"
authors = ["ohs80340"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.2"
chrono = "0.4"
diesel = { version = "*", features = ["mysql"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
derive_more = "0.99.13"
tera = "1.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-rt = "1"
actix-files = "0.3"
actix-session = "0.4"

